--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width">
+  	<title>Lindsay Trosvig Resume</title>
+	<link rel="stylesheet" type="text/css" href ="style.css"/>
 </head>
 <body>
 	<h1>Lindsay Trosvig</h1>
